--- a/JS/index.html
+++ b/JS/index.html
@@ -10,6 +10,10 @@
     <h1>Programacion orientada a objetos en JS</h1>
     <script src="./Car.js"></script>
     <script src="./Account.js"></script>
+    <script src="./UberX.js"></script>
+    <script src="./UberPool.js"></script>
+    <script src="./UberBlack.js"></script>
+    <script src="./UberXL.js"></script>
     <script src="./Payment.js"></script>
     <script src="./Route.js"></script>
     <script src="./Index.js"></script>
