--- a/JS/index.html
+++ b/JS/index.html
@@ -11,6 +11,8 @@
     <script src="./Car.js"></script>
     <script src="./Account.js"></script>
     <script src="./UberX.js"></script>
+    <script src="./Driver.js"></script>
+    <script src="./User.js"></script>
     <script src="./UberPool.js"></script>
     <script src="./UberBlack.js"></script>
     <script src="./UberXL.js"></script>
